plugin_folder/Timeline/css/simileTimeline.css
html  {background-color: #003366;}
#doc3 {background-color: #ffffff;}

/* WAS FFF8DC */

/* previously the #bd had a margin of 2em. Took out because Erich asked that the timeline go out to the edges of the display. */

#wrap1 {display: block;}
#hd, #ft {margin: 2em; padding-top: 2em;}
#ft {padding-bottom: 1em;}
#bd div.yui-g 
{
	margin: none;
}


h1 {color: #834c24;}
p {margin-top: .5em;}

p#mytitle
{
	text-align: center;
	font-size: 2em;

}

.timeline-copyright
{
	bottom:10px !important;
}

#exclusiondiv
{
	margin-top:20px;
	font-size:1.0em;
}

div#controls table td
{
	border:none;
}

div#controls
{
	margin-bottom:-10px;
}

.btn {
  background: #3498db;
  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
  background-image: -o-linear-gradient(top, #3498db, #2980b9);
  background-image: linear-gradient(to bottom, #3498db, #2980b9);
  -webkit-border-radius: 17;
  -moz-border-radius: 17;
  border-radius: 17px;
  font-family: Arial;
  color: #ffffff;
  font-size: 10px;
  padding: 5px 10px 5px 10px;
  text-decoration: none;
}

.btn:hover {
  background: #3cb0fd;
  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
  text-decoration: none;
}

#controls > table:nth-child(1) > tbody:nth-child(1) > tr:nth-child(2) > td:nth-child(5) > input:nth-child(1)
{
	/* pink */
	background: #ffb3ba !important;
}

#controls > table:nth-child(1) > tbody:nth-child(1) > tr:nth-child(2) > td:nth-child(4) > input:nth-child(1)
{
	/* orange */
	background: #ffdfba !important;
}

#controls > table:nth-child(1) > tbody:nth-child(1) > tr:nth-child(2) > td:nth-child(3) > input:nth-child(1)
{
	/* yellow */
	background: #ffffba !important;
}

#warningzero
{
	font-size:1.5em;
	font-style:italic;
	font-weight: bolder;
}

#tl
{
  /*
	height:600px !important;
  overflow-x:hidden !important; 
  overflow-y:scroll !important;

  
  height:2000px;
*/
}

div.timeline-event-bubble-time
{
  display:none;
  visibility: hidden;
}

div.timeline-event-bubble-wiki
{
  display: none;
  visibility: hidden;
}

.timeline-date-label
{
	color:black !important;
}

input.controlinput
{
	color:white;
	font-weight:bolder;
}

input#filtercontrol
{
	color:black;
	font-weight:bolder;
}

div#tlb0lscroll
{
	font-size:2.0em;
	float:left;
	margin-top:8px;
	margin-left:-8px;
	color:red;
}

div#tlb0rscroll
{
	font-size:2.0em;
	float:right;
	margin-top:8px;
	margin-left:-32px;
	color:red;
}

div#tlb1lscroll
{
	font-size:2.0em;
	float:left;
	margin-top:40px;
	margin-left:-16px;
	color:blue;
}

div#tlb1rscroll
{
	font-size:2.0em;
	float:right;
	margin-top:40px;
	margin-left:0px;
	color:blue;
}

div#tlb2lscroll
{
	font-size:2.0em;
	float:left;
	margin-top:80px;
	margin-left:-16px;
	color:yellow;
}

div#tlb2rscroll
{
	font-size:2.0em;
	float:right;
	margin-top:80px;
	margin-left:0px;
	color:yellow;
}

#leftbandcontrols
{
	float:left;
	/* margin-top:23px; */
	margin-left:-10px;
	margin-right:5px;
	/*
	padding:10px;
	background-color:pink;
	border:1px solid black;
	*/
}

#rightbandcontrols
{
	float:right;
	/* margin-top:25px; */
	margin-left:5px;
	/*
	padding:10px;
	background-color:yellow;
	border:1px solid black;
	*/
}

.bandcontrolbuttons
{
	background-color:white;
	margin-bottom:10px !important;
	border-radius:10px;
}

div#rightbandcontrols > button
{
	width:30px;
}

#timeline-band-3 .timeline-date-label
{
	top:0px;
}

.timeline-band
{
	border:3px solid white;
}

.timeline-horizontal .timeline-date-label-em
{
	height:1.5em !important;
}

/*
originally from Base-Min.css
Copyright (c) 2009, Yahoo! Inc. All rights reserved.
Code licensed under the BSD License:
http://developer.yahoo.net/yui/license.txt
version: 2.7.0
*/
/*
body{margin:10px;}h1{font-size:138.5%;}h2{font-size:123.1%;}h3{font-size:108%;}h1,h2,h3{margin:1em 0;}h1,h2,h3,h4,h5,h6,strong,dt{font-weight:bold;}optgroup{font-weight:normal;}abbr,acronym{border-bottom:1px dotted #000;cursor:help;}em{font-style:italic;}del{text-decoration:line-through;}blockquote,ul,ol,dl{margin:1em;}ol,ul,dl{margin-left:2em;}ol li{list-style:decimal outside;}ul li{list-style:disc outside;}dl dd{margin-left:1em;}tcaption{margin-bottom:.5em;text-align:center;}sup{vertical-align:super;}sub{vertical-align:sub;}p,fieldset,table,pre{margin-bottom:1em;}button,input[type="checkbox"],input[type="radio"],input[type="reset"],input[type="submit"]{padding:1px;}
*/

/*
originally from reset-fonts-grids.css
Copyright (c) 2009, Yahoo! Inc. All rights reserved.
Code licensed under the BSD License:
http://developer.yahoo.net/yui/license.txt
version: 2.7.0
*/

/*
html{color:#000;background:#FFF;}
body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,button,textarea,p,blockquote,th,td{margin:0;padding:0;}
table{border-collapse:collapse;border-spacing:0;}
fieldset,img{border:0;}
address,caption,cite,code,dfn,em,strong,th,var,optgroup{font-style:inherit;font-weight:inherit;}
del,ins{text-decoration:none;}
li{list-style:none;}
caption,th{text-align:left;}
h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal;}
q:before,q:after{content:'';}
abbr,acronym{border:0;font-variant:normal;}
sup{vertical-align:baseline;}
sub{vertical-align:baseline;}
legend{color:#000;}
input,button,textarea,select,optgroup,option{font-family:inherit;font-size:inherit;font-style:inherit;font-weight:inherit;}
input,button,textarea,select{*font-size:100%;}
body{font:13px/1.231 arial,helvetica,clean,sans-serif;*font-size:small;*font:x-small;}
select,input,button,textarea,button{font:99% arial,helvetica,clean,sans-serif;}
table{font-size:inherit;font:100%;}
pre,code,kbd,samp,tt{font-family:monospace;*font-size:108%;line-height:100%;}
body{text-align:center;}  */

#doc,#doc2,#doc3,#doc4,.yui-t1,.yui-t2,.yui-t3,.yui-t4,.yui-t5,.yui-t6,.yui-t7{margin:auto;text-align:left;width:57.69em;*width:56.25em;}
#doc2{width:73.076em;*width:71.25em;}
#doc3{margin:auto 10px;width:auto;}
#doc4{width:74.923em;*width:73.05em;}
.yui-b{position:relative;}
.yui-b{_position:static;}
#yui-main .yui-b{position:static;}
#yui-main,.yui-g .yui-u .yui-g{width:100%;}
.yui-t1 #yui-main,.yui-t2 #yui-main,.yui-t3 #yui-main{float:right;margin-left:-25em;}
.yui-t4 #yui-main,.yui-t5 #yui-main,.yui-t6 #yui-main{float:left;margin-right:-25em;}
.yui-t1 .yui-b{float:left;width:12.30769em;*width:12.00em;}
.yui-t1 #yui-main .yui-b{margin-left:13.30769em;*margin-left:13.05em;}
.yui-t2 .yui-b{float:left;width:13.8461em;*width:13.50em;}
.yui-t2 #yui-main .yui-b{margin-left:14.8461em;*margin-left:14.55em;}
.yui-t3 .yui-b{float:left;width:23.0769em;*width:22.50em;}
.yui-t3 #yui-main .yui-b{margin-left:24.0769em;*margin-left:23.62em;}
.yui-t4 .yui-b{float:right;width:13.8456em;*width:13.50em;}
.yui-t4 #yui-main .yui-b{margin-right:14.8456em;*margin-right:14.55em;}
.yui-t5 .yui-b{float:right;width:18.4615em;*width:18.00em;}
.yui-t5 #yui-main .yui-b{margin-right:19.4615em;*margin-right:19.125em;}
.yui-t6 .yui-b{float:right;width:23.0769em;*width:22.50em;}
.yui-t6 #yui-main .yui-b{margin-right:24.0769em;*margin-right:23.62em;}
.yui-t7 #yui-main .yui-b{display:block;margin:0 0 1em 0;}
#yui-main .yui-b{float:none;width:auto;}
.yui-gb .yui-u,.yui-g .yui-gb .yui-u,.yui-gb .yui-g,.yui-gb .yui-gb,.yui-gb .yui-gc,.yui-gb .yui-gd,.yui-gb .yui-ge,.yui-gb .yui-gf,.yui-gc .yui-u,.yui-gc .yui-g,.yui-gd .yui-u{float:left;}
.yui-g .yui-u,.yui-g .yui-g,.yui-g .yui-gb,.yui-g .yui-gc,.yui-g .yui-gd,.yui-g .yui-ge,.yui-g .yui-gf,.yui-gc .yui-u,.yui-gd .yui-g,.yui-g .yui-gc .yui-u,.yui-ge .yui-u,.yui-ge .yui-g,.yui-gf .yui-g,.yui-gf .yui-u{float:right;}
.yui-g div.first,.yui-gb div.first,.yui-gc div.first,.yui-gd div.first,.yui-ge div.first,.yui-gf div.first,.yui-g .yui-gc div.first,.yui-g .yui-ge div.first,.yui-gc div.first div.first{float:left;}
.yui-g .yui-u,.yui-g .yui-g,.yui-g .yui-gb,.yui-g .yui-gc,.yui-g .yui-gd,.yui-g .yui-ge,.yui-g .yui-gf{width:49.1%;}
.yui-gb .yui-u,.yui-g .yui-gb .yui-u,.yui-gb .yui-g,.yui-gb .yui-gb,.yui-gb .yui-gc,.yui-gb .yui-gd,.yui-gb .yui-ge,.yui-gb .yui-gf,.yui-gc .yui-u,.yui-gc .yui-g,.yui-gd .yui-u{width:32%;margin-left:1.99%;}
.yui-gb .yui-u{*margin-left:1.9%;*width:31.9%;}
.yui-gc div.first,.yui-gd .yui-u{width:66%;}
.yui-gd div.first{width:32%;}
.yui-ge div.first,.yui-gf .yui-u{width:74.2%;}
.yui-ge .yui-u,.yui-gf div.first{width:24%;}
.yui-g .yui-gb div.first,.yui-gb div.first,.yui-gc div.first,.yui-gd div.first{margin-left:0;}
.yui-g .yui-g .yui-u,.yui-gb .yui-g .yui-u,.yui-gc .yui-g .yui-u,.yui-gd .yui-g .yui-u,.yui-ge .yui-g .yui-u,.yui-gf .yui-g .yui-u{width:49%;*width:48.1%;*margin-left:0;}
.yui-g .yui-g .yui-u{width:48.1%;}
.yui-g .yui-gb div.first,.yui-gb .yui-gb div.first{*margin-right:0;*width:32%;_width:31.7%;}
.yui-g .yui-gc div.first,.yui-gd .yui-g{width:66%;}.yui-gb .yui-g div.first{*margin-right:4%;_margin-right:1.3%;}
.yui-gb .yui-gc div.first,.yui-gb .yui-gd div.first{*margin-right:0;}
.yui-gb .yui-gb .yui-u,.yui-gb .yui-gc .yui-u{*margin-left:1.8%;_margin-left:4%;}
.yui-g .yui-gb .yui-u{_margin-left:1.0%;}
.yui-gb .yui-gd .yui-u{*width:66%;_width:61.2%;}
.yui-gb .yui-gd div.first{*width:31%;_width:29.5%;}
.yui-g .yui-gc .yui-u,.yui-gb .yui-gc .yui-u{width:32%;_float:right;margin-right:0;_margin-left:0;}
.yui-gb .yui-gc div.first{width:66%;*float:left;*margin-left:0;}
.yui-gb .yui-ge .yui-u,.yui-gb .yui-gf .yui-u{margin:0;}
.yui-gb .yui-gb .yui-u{_margin-left:.7%;}
.yui-gb .yui-g div.first,.yui-gb .yui-gb div.first{*margin-left:0;}
.yui-gc .yui-g .yui-u,.yui-gd .yui-g .yui-u{*width:48.1%;*margin-left:0;}
.yui-gb .yui-gd div.first{width:32%;}
.yui-g .yui-gd div.first{_width:29.9%;}
.yui-ge .yui-g{width:24%;}
.yui-gf .yui-g{width:74.2%;}
.yui-gb .yui-ge div.yui-u,.yui-gb .yui-gf div.yui-u{float:right;}
.yui-gb .yui-ge div.first,.yui-gb .yui-gf div.first{float:left;}
.yui-gb .yui-ge .yui-u,.yui-gb .yui-gf div.first{*width:24%;_width:20%;}
.yui-gb .yui-ge div.first,.yui-gb .yui-gf .yui-u{*width:73.5%;_width:65.5%;}
.yui-ge div.first .yui-gd .yui-u{width:65%;}
.yui-ge div.first .yui-gd div.first{width:32%;}
#hd:after,#bd:after,#ft:after,.yui-g:after,.yui-gb:after,.yui-gc:after,.yui-gd:after,.yui-ge:after,.yui-gf:after{content:".";display:block;height:0;clear:both;visibility:hidden;}
#hd,#bd,#ft,.yui-g,.yui-gb,.yui-gc,.yui-gd,.yui-ge,.yui-gf{zoom:1;}




/* Originally from simile-widgets-org_timeline_examples_styles.css */

/*
@import url("../styles.css");
*/

.footnotes {
    background: #eee;
    padding: 0.25em;
}

.controls {
    margin: 1em 0;
    padding: 0.5em;
}

.controlinput
{
	width:100px;
	position: relative;
    display: block;
    margin : 0 auto;
}

.controlinput + div
{
	width:102px;
	margin-left:auto;
	margin-right:auto;
}

#controls button
{
	position: relative;
    display: block;
    margin : 0 auto;
}

#controls > table > tbody > tr > td
{
	text-align:center;
}

#exclusiondiv > p > a
{
	text-decoration: underline;
}

.timeline-small-event-icon
{
	width:2px !important;
	height:10px !important;
	top:6px !important;
}

#gotolinks
{
	margin-top:-10px;
}

#fhcontrols
{
	margin-top:-10px;
}

div.timeline-event-icon, div.timeline-event-label
{
	padding-top:15px;
}

button#band0leftscroll
{
	background-color:#eeeeee;
	width:75px;
	text-align:right;
}

button#band0rightscroll
{
	background-color:#eeeeee;
}

button#band1leftscroll
{
	background-color:#dddddd;
	width:75px;
	text-align:right;
}

button#band1rightscroll
{
	background-color:#dddddd;
}

button#band2leftscroll
{
	background-color:#cccccc;
	width:75px;
	text-align:right;
}

button#band2rightscroll
{
	background-color:#cccccc;
}

button#band3leftscroll
{
	background-color:#aaaaaa;
	width:75px;
	text-align:right;
}

button#band3rightscroll
{
	background-color:#aaaaaa;
}

